added indentation to the json

--- a/src/query_cae.ipynb
+++ b/src/query_cae.ipynb
@@ -1394,6 +1394,10 @@
    "id": "d4b4bd4e",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
+    "---\n",
+    "\n",
     "# Aggregated Total Borrowed"
    ]
   },
@@ -2021,39 +2025,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "1d20afdc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_borrowed.to_json(\"../data/total_borrowed.json\", orient=\"records\", lines=False, force_ascii=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "6f47d378",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['REGION DE AYSEN DEL G. C. IBAÑEZ', 'REGION DEL BIO-BIO',\n",
-       "       'REGION DE LOS LAGOS', 'REGION DE ATACAMA', 'REGION DE ÑUBLE',\n",
-       "       'REGION DE LA ARAUCANIA', 'REGION DE ANTOFAGASTA',\n",
-       "       'REGION DE TARAPACA', 'REGION DE LOS RIOS', 'REGION DE COQUIMBO',\n",
-       "       'REGION METROPOLITANA', 'REGION DEL MAULE', 'REGION DE VALPARAISO',\n",
-       "       \"REGION DEL LIB. B. O'HIGGINS\", 'REGION DE ARICA Y PARINACOTA',\n",
-       "       'REGION DE MAGALLANES Y LA ANTARTICA'], dtype=object)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "total_borrowed[\"region\"].unique()"
+    "total_borrowed.to_json(\"../data/total_borrowed.json\",\n",
+    "                       orient=\"records\",\n",
+    "                       lines=False,\n",
+    "                       force_ascii=False,\n",
+    "                       indent=4)"
    ]
   },
   {
