--- a/src/query_cae.ipynb
+++ b/src/query_cae.ipynb
@@ -1391,604 +1391,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "42c3713c",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "region",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "quintil",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "genero",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "año_financiado",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "total_prestado",
-         "rawType": "float64",
-         "type": "float"
-        }
-       ],
-       "ref": "25f03568-4448-4e1c-8088-ae82cf9bed91",
-       "rows": [
-        [
-         "0",
-         "REGION METROPOLITANA",
-         "quintil 1 y 2",
-         "M",
-         "2013",
-         "72521500.0"
-        ],
-        [
-         "1",
-         "REGION METROPOLITANA",
-         "quintil 3",
-         "F",
-         "2013",
-         "48170922.0"
-        ],
-        [
-         "2",
-         "REGION DEL LIB. B. O'HIGGINS",
-         "quintil 1 y 2",
-         "M",
-         "2012",
-         "10160922.0"
-        ],
-        [
-         "3",
-         "REGION METROPOLITANA",
-         "quintil 4",
-         "F",
-         "2013",
-         "52737926.0"
-        ],
-        [
-         "4",
-         "REGION METROPOLITANA",
-         "quintil 1 y 2",
-         "F",
-         "2013",
-         "102022530.0"
-        ],
-        [
-         "5",
-         "REGION METROPOLITANA",
-         "quintil 1 y 2",
-         "M",
-         "2014",
-         "63139985.0"
-        ],
-        [
-         "6",
-         "REGION METROPOLITANA",
-         "quintil 1 y 2",
-         "F",
-         "2014",
-         "80944990.0"
-        ],
-        [
-         "7",
-         "REGION DE VALPARAISO",
-         "quintil 1 y 2",
-         "M",
-         "2013",
-         "19469121.0"
-        ],
-        [
-         "8",
-         "REGION DE VALPARAISO",
-         "quintil 5",
-         "F",
-         "2014",
-         "8736016.0"
-        ],
-        [
-         "9",
-         "REGION METROPOLITANA",
-         "quintil 3",
-         "M",
-         "2011",
-         "46658666.0"
-        ],
-        [
-         "10",
-         "REGION DEL LIB. B. O'HIGGINS",
-         "quintil 4",
-         "M",
-         "2011",
-         "3579454.0"
-        ],
-        [
-         "11",
-         "REGION DE LOS LAGOS",
-         "quintil 1 y 2",
-         "F",
-         "2013",
-         "11982021.0"
-        ],
-        [
-         "12",
-         "REGION DE LOS RIOS",
-         "quintil 3",
-         "F",
-         "2013",
-         "2046065.0"
-        ],
-        [
-         "13",
-         "REGION METROPOLITANA",
-         "quintil 4",
-         "F",
-         "2014",
-         "44876496.0"
-        ],
-        [
-         "14",
-         "REGION DE LA ARAUCANIA",
-         "quintil 3",
-         "F",
-         "2013",
-         "3532447.0"
-        ],
-        [
-         "15",
-         "REGION DEL BIO-BIO",
-         "quintil 4",
-         "F",
-         "2013",
-         "10418332.0"
-        ],
-        [
-         "16",
-         "REGION METROPOLITANA",
-         "quintil 3",
-         "F",
-         "2014",
-         "37948004.0"
-        ],
-        [
-         "17",
-         "REGION DE LA ARAUCANIA",
-         "quintil 1 y 2",
-         "F",
-         "2013",
-         "12191422.0"
-        ],
-        [
-         "18",
-         "REGION DE LOS LAGOS",
-         "quintil 3",
-         "F",
-         "2016",
-         "3410759.0"
-        ],
-        [
-         "19",
-         "REGION DE VALPARAISO",
-         "quintil 1 y 2",
-         "M",
-         "2014",
-         "15436113.0"
-        ],
-        [
-         "20",
-         "REGION DEL LIB. B. O'HIGGINS",
-         "quintil 3",
-         "M",
-         "2013",
-         "3350269.0"
-        ],
-        [
-         "21",
-         "REGION DE VALPARAISO",
-         "quintil 5",
-         "F",
-         "2013",
-         "5626451.0"
-        ],
-        [
-         "22",
-         "REGION DEL LIB. B. O'HIGGINS",
-         "quintil 4",
-         "F",
-         "2013",
-         "4231334.0"
-        ],
-        [
-         "23",
-         "REGION DE ARICA Y PARINACOTA",
-         "quintil 3",
-         "M",
-         "2013",
-         "779610.0"
-        ],
-        [
-         "24",
-         "REGION DE TARAPACA",
-         "quintil 1 y 2",
-         "F",
-         "2015",
-         "1834292.0"
-        ],
-        [
-         "25",
-         "REGION METROPOLITANA",
-         "quintil 3",
-         "M",
-         "2015",
-         "31287151.0"
-        ],
-        [
-         "26",
-         "REGION DE VALPARAISO",
-         "quintil 1 y 2",
-         "F",
-         "2011",
-         "40361791.0"
-        ],
-        [
-         "27",
-         "REGION DEL LIB. B. O'HIGGINS",
-         "quintil 3",
-         "F",
-         "2010",
-         "3878913.0"
-        ],
-        [
-         "28",
-         "REGION DE LA ARAUCANIA",
-         "quintil 1 y 2",
-         "F",
-         "2014",
-         "10730540.0"
-        ],
-        [
-         "29",
-         "REGION DE COQUIMBO",
-         "quintil 1 y 2",
-         "M",
-         "2013",
-         "3779843.0"
-        ],
-        [
-         "30",
-         "REGION DE VALPARAISO",
-         "quintil 1 y 2",
-         "F",
-         "2015",
-         "23599616.0"
-        ],
-        [
-         "31",
-         "REGION DE ÑUBLE",
-         "quintil 5",
-         "M",
-         "2013",
-         "475417.0"
-        ],
-        [
-         "32",
-         "REGION DE VALPARAISO",
-         "quintil 3",
-         "M",
-         "2015",
-         "6334260.0"
-        ],
-        [
-         "33",
-         "REGION DE LOS RIOS",
-         "quintil 3",
-         "M",
-         "2012",
-         "1715858.0"
-        ],
-        [
-         "34",
-         "REGION DEL MAULE",
-         "quintil 3",
-         "F",
-         "2015",
-         "3304483.0"
-        ],
-        [
-         "35",
-         "REGION DE VALPARAISO",
-         "quintil 3",
-         "M",
-         "2011",
-         "9219526.0"
-        ],
-        [
-         "36",
-         "REGION DE LA ARAUCANIA",
-         "quintil 1 y 2",
-         "M",
-         "2016",
-         "3256714.0"
-        ],
-        [
-         "37",
-         "REGION DE LOS LAGOS",
-         "quintil 1 y 2",
-         "F",
-         "2014",
-         "10583851.0"
-        ],
-        [
-         "38",
-         "REGION DE VALPARAISO",
-         "quintil 3",
-         "F",
-         "2010",
-         "10165069.0"
-        ],
-        [
-         "39",
-         "REGION DEL BIO-BIO",
-         "quintil 5",
-         "F",
-         "2012",
-         "3922764.0"
-        ],
-        [
-         "40",
-         "REGION DE COQUIMBO",
-         "quintil 3",
-         "M",
-         "2016",
-         "1273874.0"
-        ],
-        [
-         "41",
-         "REGION DE MAGALLANES Y LA ANTARTICA",
-         "quintil 5",
-         "F",
-         "2013",
-         "525799.0"
-        ],
-        [
-         "42",
-         "REGION DE COQUIMBO",
-         "quintil 4",
-         "F",
-         "2012",
-         "2415052.0"
-        ],
-        [
-         "43",
-         "REGION DE MAGALLANES Y LA ANTARTICA",
-         "quintil 1 y 2",
-         "F",
-         "2012",
-         "1481631.0"
-        ],
-        [
-         "44",
-         "REGION DEL BIO-BIO",
-         "quintil 5",
-         "M",
-         "2016",
-         "9283448.0"
-        ],
-        [
-         "45",
-         "REGION DE LA ARAUCANIA",
-         "quintil 4",
-         "F",
-         "2016",
-         "3208557.0"
-        ],
-        [
-         "46",
-         "REGION DE ANTOFAGASTA",
-         "quintil 1 y 2",
-         "F",
-         "2016",
-         "1527059.0"
-        ],
-        [
-         "47",
-         "REGION DEL BIO-BIO",
-         "quintil 4",
-         "M",
-         "2007",
-         "2350083.0"
-        ],
-        [
-         "48",
-         "REGION DE COQUIMBO",
-         "quintil 1 y 2",
-         "M",
-         "2014",
-         "3748605.0"
-        ],
-        [
-         "49",
-         "REGION DEL MAULE",
-         "quintil 1 y 2",
-         "M",
-         "2010",
-         "18538213.0"
-        ]
-       ],
-       "shape": {
-        "columns": 5,
-        "rows": 2361
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>region</th>\n",
-       "      <th>quintil</th>\n",
-       "      <th>genero</th>\n",
-       "      <th>año_financiado</th>\n",
-       "      <th>total_prestado</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>REGION METROPOLITANA</td>\n",
-       "      <td>quintil 1 y 2</td>\n",
-       "      <td>M</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>72521500.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>REGION METROPOLITANA</td>\n",
-       "      <td>quintil 3</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>48170922.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>REGION DEL LIB. B. O'HIGGINS</td>\n",
-       "      <td>quintil 1 y 2</td>\n",
-       "      <td>M</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>10160922.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>REGION METROPOLITANA</td>\n",
-       "      <td>quintil 4</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>52737926.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>REGION METROPOLITANA</td>\n",
-       "      <td>quintil 1 y 2</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>102022530.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2356</th>\n",
-       "      <td>REGION DE ATACAMA</td>\n",
-       "      <td>quintil 3</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>221950.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2357</th>\n",
-       "      <td>REGION DE ÑUBLE</td>\n",
-       "      <td>quintil 5</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>35101.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2358</th>\n",
-       "      <td>REGION DE MAGALLANES Y LA ANTARTICA</td>\n",
-       "      <td>quintil 4</td>\n",
-       "      <td>M</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>122236.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2359</th>\n",
-       "      <td>REGION DE AYSEN DEL G. C. IBAÑEZ</td>\n",
-       "      <td>quintil 3</td>\n",
-       "      <td>M</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>41004.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2360</th>\n",
-       "      <td>REGION DE COQUIMBO</td>\n",
-       "      <td>quintil 5</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>8952.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2361 rows × 5 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                   region        quintil genero  \\\n",
-       "0                    REGION METROPOLITANA  quintil 1 y 2      M   \n",
-       "1                    REGION METROPOLITANA      quintil 3      F   \n",
-       "2            REGION DEL LIB. B. O'HIGGINS  quintil 1 y 2      M   \n",
-       "3                    REGION METROPOLITANA      quintil 4      F   \n",
-       "4                    REGION METROPOLITANA  quintil 1 y 2      F   \n",
-       "...                                   ...            ...    ...   \n",
-       "2356                    REGION DE ATACAMA      quintil 3      F   \n",
-       "2357                      REGION DE ÑUBLE      quintil 5      F   \n",
-       "2358  REGION DE MAGALLANES Y LA ANTARTICA      quintil 4      M   \n",
-       "2359     REGION DE AYSEN DEL G. C. IBAÑEZ      quintil 3      M   \n",
-       "2360                   REGION DE COQUIMBO      quintil 5      F   \n",
-       "\n",
-       "      año_financiado  total_prestado  \n",
-       "0               2013      72521500.0  \n",
-       "1               2013      48170922.0  \n",
-       "2               2012      10160922.0  \n",
-       "3               2013      52737926.0  \n",
-       "4               2013     102022530.0  \n",
-       "...              ...             ...  \n",
-       "2356            2024        221950.0  \n",
-       "2357            2008         35101.0  \n",
-       "2358            2024        122236.0  \n",
-       "2359            2022         41004.0  \n",
-       "2360            2008          8952.0  \n",
-       "\n",
-       "[2361 rows x 5 columns]"
+       "np.float64(294.59439)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2034,7 +1447,8 @@
     "                        force_ascii=False,\n",
     "                        indent=4)\n",
     "\n",
-    "total_borrowed"
+    "p = total_borrowed.query(\"año_financiado == 2024\")\n",
+    "p[\"total_prestado\"].sum()/1000000"
    ]
   },
   {
